CSRF token added and bug fixed

--- a/template/analyze.html
+++ b/template/analyze.html
@@ -15,8 +15,8 @@
 
     <div class="container mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">Your Analyzed Text!!</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="height: 411px;">{{texting}}{{analyzed_text}}
-      </textarea>
+      <pre><textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="height: 411px;">{{texting}}{{analyzed_text}}
+      </textarea></pre>
       <button type="button" class="btn btn-light mt-3" >
         <a href="/">Home</a>
       </button>
